remade core little
