# pkg/resources/model_delete_upload_profile_avatar_data_attributes.go
@@ -12,8 +12,6 @@ package resources
 
 import (
 	"encoding/json"
-	"bytes"
-	"fmt"
 )
 
 // checks if the DeleteUploadProfileAvatarDataAttributes type satisfies the MappedNullable interface at compile time
@@ -22,18 +20,15 @@ var _ MappedNullable = &DeleteUploadProfileAvatarDataAttributes{}
 // DeleteUploadProfileAvatarDataAttributes struct for DeleteUploadProfileAvatarDataAttributes
 type DeleteUploadProfileAvatarDataAttributes struct {
 	// avatar media key
-	AvatarKey string `json:"avatar_key"`
+	AvatarKey *string `json:"avatar_key,omitempty"`
 }
-
-type _DeleteUploadProfileAvatarDataAttributes DeleteUploadProfileAvatarDataAttributes
 
 // NewDeleteUploadProfileAvatarDataAttributes instantiates a new DeleteUploadProfileAvatarDataAttributes object
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewDeleteUploadProfileAvatarDataAttributes(avatarKey string) *DeleteUploadProfileAvatarDataAttributes {
+func NewDeleteUploadProfileAvatarDataAttributes() *DeleteUploadProfileAvatarDataAttributes {
 	this := DeleteUploadProfileAvatarDataAttributes{}
-	this.AvatarKey = avatarKey
 	return &this
 }
 
@@ -45,28 +40,36 @@ func NewDeleteUploadProfileAvatarDataAttributesWithDefaults() *DeleteUploadProfi
 	return &this
 }
 
-// GetAvatarKey returns the AvatarKey field value
+// GetAvatarKey returns the AvatarKey field value if set, zero value otherwise.
 func (o *DeleteUploadProfileAvatarDataAttributes) GetAvatarKey() string {
-	if o == nil {
+	if o == nil || IsNil(o.AvatarKey) {
 		var ret string
 		return ret
 	}
-
-	return o.AvatarKey
+	return *o.AvatarKey
 }
 
-// GetAvatarKeyOk returns a tuple with the AvatarKey field value
+// GetAvatarKeyOk returns a tuple with the AvatarKey field value if set, nil otherwise
 // and a boolean to check if the value has been set.
 func (o *DeleteUploadProfileAvatarDataAttributes) GetAvatarKeyOk() (*string, bool) {
-	if o == nil {
+	if o == nil || IsNil(o.AvatarKey) {
 		return nil, false
 	}
-	return &o.AvatarKey, true
+	return o.AvatarKey, true
 }
 
-// SetAvatarKey sets field value
+// HasAvatarKey returns a boolean if a field has been set.
+func (o *DeleteUploadProfileAvatarDataAttributes) HasAvatarKey() bool {
+	if o != nil && !IsNil(o.AvatarKey) {
+		return true
+	}
+
+	return false
+}
+
+// SetAvatarKey gets a reference to the given string and assigns it to the AvatarKey field.
 func (o *DeleteUploadProfileAvatarDataAttributes) SetAvatarKey(v string) {
-	o.AvatarKey = v
+	o.AvatarKey = &v
 }
 
 func (o DeleteUploadProfileAvatarDataAttributes) MarshalJSON() ([]byte, error) {
@@ -79,45 +82,10 @@ func (o DeleteUploadProfileAvatarDataAttributes) MarshalJSON() ([]byte, error) {
 
 func (o DeleteUploadProfileAvatarDataAttributes) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
-	toSerialize["avatar_key"] = o.AvatarKey
+	if !IsNil(o.AvatarKey) {
+		toSerialize["avatar_key"] = o.AvatarKey
+	}
 	return toSerialize, nil
-}
-
-func (o *DeleteUploadProfileAvatarDataAttributes) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"avatar_key",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varDeleteUploadProfileAvatarDataAttributes := _DeleteUploadProfileAvatarDataAttributes{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varDeleteUploadProfileAvatarDataAttributes)
-
-	if err != nil {
-		return err
-	}
-
-	*o = DeleteUploadProfileAvatarDataAttributes(varDeleteUploadProfileAvatarDataAttributes)
-
-	return err
 }
 
 type NullableDeleteUploadProfileAvatarDataAttributes struct {
