# pkg/resources/model_update_profile_official.go
@@ -1,158 +1,0 @@
-/*
-NetBill profile service
-
-profile-svc docs
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateProfileOfficial type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateProfileOfficial{}
-
-// UpdateProfileOfficial struct for UpdateProfileOfficial
-type UpdateProfileOfficial struct {
-	Data UpdateProfileOfficialData `json:"data"`
-}
-
-type _UpdateProfileOfficial UpdateProfileOfficial
-
-// NewUpdateProfileOfficial instantiates a new UpdateProfileOfficial object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateProfileOfficial(data UpdateProfileOfficialData) *UpdateProfileOfficial {
-	this := UpdateProfileOfficial{}
-	this.Data = data
-	return &this
-}
-
-// NewUpdateProfileOfficialWithDefaults instantiates a new UpdateProfileOfficial object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateProfileOfficialWithDefaults() *UpdateProfileOfficial {
-	this := UpdateProfileOfficial{}
-	return &this
-}
-
-// GetData returns the Data field value
-func (o *UpdateProfileOfficial) GetData() UpdateProfileOfficialData {
-	if o == nil {
-		var ret UpdateProfileOfficialData
-		return ret
-	}
-
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value
-// and a boolean to check if the value has been set.
-func (o *UpdateProfileOfficial) GetDataOk() (*UpdateProfileOfficialData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Data, true
-}
-
-// SetData sets field value
-func (o *UpdateProfileOfficial) SetData(v UpdateProfileOfficialData) {
-	o.Data = v
-}
-
-func (o UpdateProfileOfficial) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateProfileOfficial) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["data"] = o.Data
-	return toSerialize, nil
-}
-
-func (o *UpdateProfileOfficial) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"data",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateProfileOfficial := _UpdateProfileOfficial{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateProfileOfficial)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateProfileOfficial(varUpdateProfileOfficial)
-
-	return err
-}
-
-type NullableUpdateProfileOfficial struct {
-	value *UpdateProfileOfficial
-	isSet bool
-}
-
-func (v NullableUpdateProfileOfficial) Get() *UpdateProfileOfficial {
-	return v.value
-}
-
-func (v *NullableUpdateProfileOfficial) Set(val *UpdateProfileOfficial) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateProfileOfficial) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateProfileOfficial) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateProfileOfficial(val *UpdateProfileOfficial) *NullableUpdateProfileOfficial {
-	return &NullableUpdateProfileOfficial{value: val, isSet: true}
-}
-
-func (v NullableUpdateProfileOfficial) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateProfileOfficial) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
