# pkg/resources/model_update_profile_official_data_attributes.go
@@ -1,159 +1,0 @@
-/*
-NetBill profile service
-
-profile-svc docs
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateProfileOfficialDataAttributes type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateProfileOfficialDataAttributes{}
-
-// UpdateProfileOfficialDataAttributes struct for UpdateProfileOfficialDataAttributes
-type UpdateProfileOfficialDataAttributes struct {
-	// official
-	Official bool `json:"official"`
-}
-
-type _UpdateProfileOfficialDataAttributes UpdateProfileOfficialDataAttributes
-
-// NewUpdateProfileOfficialDataAttributes instantiates a new UpdateProfileOfficialDataAttributes object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateProfileOfficialDataAttributes(official bool) *UpdateProfileOfficialDataAttributes {
-	this := UpdateProfileOfficialDataAttributes{}
-	this.Official = official
-	return &this
-}
-
-// NewUpdateProfileOfficialDataAttributesWithDefaults instantiates a new UpdateProfileOfficialDataAttributes object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateProfileOfficialDataAttributesWithDefaults() *UpdateProfileOfficialDataAttributes {
-	this := UpdateProfileOfficialDataAttributes{}
-	return &this
-}
-
-// GetOfficial returns the Official field value
-func (o *UpdateProfileOfficialDataAttributes) GetOfficial() bool {
-	if o == nil {
-		var ret bool
-		return ret
-	}
-
-	return o.Official
-}
-
-// GetOfficialOk returns a tuple with the Official field value
-// and a boolean to check if the value has been set.
-func (o *UpdateProfileOfficialDataAttributes) GetOfficialOk() (*bool, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Official, true
-}
-
-// SetOfficial sets field value
-func (o *UpdateProfileOfficialDataAttributes) SetOfficial(v bool) {
-	o.Official = v
-}
-
-func (o UpdateProfileOfficialDataAttributes) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateProfileOfficialDataAttributes) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["official"] = o.Official
-	return toSerialize, nil
-}
-
-func (o *UpdateProfileOfficialDataAttributes) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"official",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateProfileOfficialDataAttributes := _UpdateProfileOfficialDataAttributes{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateProfileOfficialDataAttributes)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateProfileOfficialDataAttributes(varUpdateProfileOfficialDataAttributes)
-
-	return err
-}
-
-type NullableUpdateProfileOfficialDataAttributes struct {
-	value *UpdateProfileOfficialDataAttributes
-	isSet bool
-}
-
-func (v NullableUpdateProfileOfficialDataAttributes) Get() *UpdateProfileOfficialDataAttributes {
-	return v.value
-}
-
-func (v *NullableUpdateProfileOfficialDataAttributes) Set(val *UpdateProfileOfficialDataAttributes) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateProfileOfficialDataAttributes) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateProfileOfficialDataAttributes) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateProfileOfficialDataAttributes(val *UpdateProfileOfficialDataAttributes) *NullableUpdateProfileOfficialDataAttributes {
-	return &NullableUpdateProfileOfficialDataAttributes{value: val, isSet: true}
-}
-
-func (v NullableUpdateProfileOfficialDataAttributes) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateProfileOfficialDataAttributes) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
